Doing the data analysis and I have analyzed the categorical features

--- a/index.ipynb
+++ b/index.ipynb
@@ -346,6 +346,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checking for Missing Values\n",
+    "The weapon type column has 32565 missing values and officer squad has 561 missing values."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -388,6 +396,16 @@
     "#  check for missing data in the dataset\n",
     "missing_values = terry_df.isnull().sum()\n",
     "missing_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of categorical columns to analyze\n",
+    "categorical_cols = ['Subject Age Group', 'Weapon Type', 'Stop Resolution', 'Subject Perceived Race', 'Subject Perceived Gender']"
    ]
   },
   {
