--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "(61050, 23)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
    "source": [
     "from scipy.stats import chi2_contingency\n",
     "\n",
-    "# Example of performing Chi-square test for 'Subject Perceived Race' and 'Arrest Flag'\n",
+    "# Performing Chi-square test for 'Subject Perceived Race' and 'Arrest Flag'\n",
     "contingency_table = pd.crosstab(terry_df['Subject Perceived Race'], terry_df['Arrest Flag'])\n",
     "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
     "\n",
@@ -613,6 +613,122 @@
     "    print(\"There is a significant association between 'Subject Perceived Race' and 'Arrest Flag'.\")\n",
     "else:\n",
     "    print(\"No significant association between 'Subject Perceived Race' and 'Arrest Flag'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-square Test Results for 'Subject Perceived Gender' and 'Arrest Flag':\n",
+      " Chi2: 132.59728273046457, p-value: 3.647072311038753e-26\n",
+      "There is a significant association between 'Subject Perceived Gender' and 'Arrest Flag'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performing Chi-square test for 'Subject Perceived Gender' and 'Arrest Flag'\n",
+    "contingency_table = pd.crosstab(terry_df['Subject Perceived Gender'], terry_df['Arrest Flag'])\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(f\"Chi-square Test Results for 'Subject Perceived Gender' and 'Arrest Flag':\\n Chi2: {chi2}, p-value: {p}\")\n",
+    "\n",
+    "# Interpretation of p-value\n",
+    "if p < 0.05:\n",
+    "    print(\"There is a significant association between 'Subject Perceived Gender' and 'Arrest Flag'.\")\n",
+    "else:\n",
+    "    print(\"No significant association between 'Subject Perceived Gender' and 'Arrest Flag'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-square Test Results for 'Stop Resolution' and 'Arrest Flag':\n",
+      " Chi2: 23071.40163433658, p-value: 0.0\n",
+      "There is a significant association between 'Stop Resolution' and 'Arrest Flag'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performing Chi-square test for 'Stop Resolution' and 'Arrest Flag'\n",
+    "contingency_table = pd.crosstab(terry_df['Stop Resolution'], terry_df['Arrest Flag'])\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(f\"Chi-square Test Results for 'Stop Resolution' and 'Arrest Flag':\\n Chi2: {chi2}, p-value: {p}\")\n",
+    "\n",
+    "# Interpretation of p-value\n",
+    "if p < 0.05:\n",
+    "    print(\"There is a significant association between 'Stop Resolution' and 'Arrest Flag'.\")\n",
+    "else:\n",
+    "    print(\"No significant association between 'Stop Resolution' and 'Arrest Flag'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-square Test Results for 'Weapon Type' and 'Arrest Flag':\n",
+      " Chi2: 866.3985890456624, p-value: 7.374640975944834e-170\n",
+      "There is a significant association between 'Weapon Type' and 'Arrest Flag'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performing Chi-square test for 'Weapon Type' and 'Arrest Flag'\n",
+    "contingency_table = pd.crosstab(terry_df['Weapon Type'], terry_df['Arrest Flag'])\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(f\"Chi-square Test Results for 'Weapon Type' and 'Arrest Flag':\\n Chi2: {chi2}, p-value: {p}\")\n",
+    "\n",
+    "# Interpretation of p-value\n",
+    "if p < 0.05:\n",
+    "    print(\"There is a significant association between 'Weapon Type' and 'Arrest Flag'.\")\n",
+    "else:\n",
+    "    print(\"No significant association between 'Weapon Type' and 'Arrest Flag'.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-square Test Results for 'Subject Age Group' and 'Arrest Flag':\n",
+      " Chi2: 339.60818980749343, p-value: 2.6242186997924706e-70\n",
+      "There is a significant association between 'Subject Age Group' and 'Arrest Flag'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Performing Chi-square test for 'Subject Age Group' and 'Arrest Flag'\n",
+    "contingency_table = pd.crosstab(terry_df['Subject Age Group'], terry_df['Arrest Flag'])\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "print(f\"Chi-square Test Results for 'Subject Age Group' and 'Arrest Flag':\\n Chi2: {chi2}, p-value: {p}\")\n",
+    "\n",
+    "# Interpretation of p-value\n",
+    "if p < 0.05:\n",
+    "    print(\"There is a significant association between 'Subject Age Group' and 'Arrest Flag'.\")\n",
+    "else:\n",
+    "    print(\"No significant association between 'Subject Age Group' and 'Arrest Flag'.\")"
    ]
   },
   {
