--- a/index.ipynb
+++ b/index.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "(61050, 23)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "(60489, 23)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1105,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1152,7 @@
        " 'Subject Perceived Gender']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1223,7 +1223,7 @@
        "      <td>-0.195411</td>\n",
        "      <td>-0.695710</td>\n",
        "      <td>1.086648</td>\n",
-       "      <td>-0.21037</td>\n",
+       "      <td>-0.254245</td>\n",
        "      <td>5489</td>\n",
        "      <td>-2.232744</td>\n",
        "      <td>M</td>\n",
@@ -1247,7 +1247,7 @@
        "      <td>-0.195413</td>\n",
        "      <td>-0.695713</td>\n",
        "      <td>1.086648</td>\n",
-       "      <td>-0.21037</td>\n",
+       "      <td>-0.254245</td>\n",
        "      <td>6403</td>\n",
        "      <td>-1.680607</td>\n",
        "      <td>M</td>\n",
@@ -1271,7 +1271,7 @@
        "      <td>-0.311618</td>\n",
        "      <td>-0.695720</td>\n",
        "      <td>1.086648</td>\n",
-       "      <td>-0.21037</td>\n",
+       "      <td>-0.254245</td>\n",
        "      <td>7473</td>\n",
        "      <td>-0.355478</td>\n",
        "      <td>M</td>\n",
@@ -1295,7 +1295,7 @@
        "      <td>0.269399</td>\n",
        "      <td>0.541959</td>\n",
        "      <td>0.187416</td>\n",
-       "      <td>-0.21037</td>\n",
+       "      <td>-0.254245</td>\n",
        "      <td>6711</td>\n",
        "      <td>-0.797188</td>\n",
        "      <td>M</td>\n",
@@ -1319,7 +1319,7 @@
        "      <td>-0.311618</td>\n",
        "      <td>-0.695717</td>\n",
        "      <td>0.187416</td>\n",
-       "      <td>-0.21037</td>\n",
+       "      <td>-0.254245</td>\n",
        "      <td>7090</td>\n",
        "      <td>-0.355478</td>\n",
        "      <td>F</td>\n",
@@ -1350,11 +1350,11 @@
        "4          -0.942061   -0.573644    -0.311618      -0.695717         0.187416   \n",
        "\n",
        "   Weapon Type Officer ID  Officer YOB Officer Gender Officer Race  ...  \\\n",
-       "0     -0.21037       5489    -2.232744              M        White  ...   \n",
-       "1     -0.21037       6403    -1.680607              M        White  ...   \n",
-       "2     -0.21037       7473    -0.355478              M        White  ...   \n",
-       "3     -0.21037       6711    -0.797188              M        White  ...   \n",
-       "4     -0.21037       7090    -0.355478              F        White  ...   \n",
+       "0    -0.254245       5489    -2.232744              M        White  ...   \n",
+       "1    -0.254245       6403    -1.680607              M        White  ...   \n",
+       "2    -0.254245       7473    -0.355478              M        White  ...   \n",
+       "3    -0.254245       6711    -0.797188              M        White  ...   \n",
+       "4    -0.254245       7090    -0.355478              F        White  ...   \n",
        "\n",
        "      Reported Time                          Initial Call Type  \\\n",
        "0  00:10:00.0000000                                   NUISANCE   \n",
@@ -1387,7 +1387,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,32 +1408,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into features and target variable\n",
-    "X = data_cleaned.drop(columns=['Arrest Flag'])\n",
-    "y = data_cleaned['Arrest Flag']"
+    "X_categorical = data_cleaned[categorical_cols]\n",
+    "y = data_cleaned['Arrest Flag'] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set size: (48391, 22)\n",
-      "Testing set size: (12098, 22)\n"
+      "Training set size: (48391, 5)\n",
+      "Testing set size: (12098, 5)\n"
      ]
     }
    ],
    "source": [
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_categorical, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(\"Training set size:\", X_train.shape)\n",
     "print(\"Testing set size:\", X_test.shape)"
@@ -1444,6 +1444,41 @@
    "metadata": {},
    "source": [
     "## Model Building"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "\n",
+    "# Initialize models\n",
+    "logistic_regression = LogisticRegression()\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "\n",
+    "# Train Logistic Regression model\n",
+    "logistic_regression.fit(X_train, y_train)\n",
+    "\n",
+    "# Train Decision Tree model\n",
+    "decision_tree.fit(X_train, y_train)"
    ]
   },
   {
