completed model building and starting hyperparameter tuning

--- a/index.ipynb
+++ b/index.ipynb
@@ -1483,6 +1483,97 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on the test set with Logistic Regression\n",
+    "y_pred_lr = logistic_regression.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict on the test set with Decision Tree\n",
+    "y_pred_dt = decision_tree.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression Model Evaluation:\n",
+      "Accuracy: 0.8922962473136056\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           N       0.91      0.98      0.94     10817\n",
+      "           Y       0.48      0.19      0.27      1281\n",
+      "\n",
+      "    accuracy                           0.89     12098\n",
+      "   macro avg       0.69      0.58      0.61     12098\n",
+      "weighted avg       0.86      0.89      0.87     12098\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[10554   263]\n",
+      " [ 1040   241]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate Logistic Regression model\n",
+    "print(\"Logistic Regression Model Evaluation:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_lr))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_lr))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_lr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Decision Tree Model Evaluation:\n",
+      "Accuracy: 0.9100677797983138\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           N       0.94      0.96      0.95     10817\n",
+      "           Y       0.60      0.47      0.52      1281\n",
+      "\n",
+      "    accuracy                           0.91     12098\n",
+      "   macro avg       0.77      0.71      0.74     12098\n",
+      "weighted avg       0.90      0.91      0.91     12098\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[10414   403]\n",
+      " [  685   596]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate Decision Tree model\n",
+    "print(\"\\nDecision Tree Model Evaluation:\")\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred_dt))\n",
+    "print(\"Classification Report:\\n\", classification_report(y_test, y_pred_dt))\n",
+    "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_dt))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
